--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "preferGlobal": true,
   "bin": {
     "gulp-generator": "source/cli.js"
+  },
+  "dependencies": {
+    "inquirer": "^1.2.2"
   }
 }
