--- a/package.json
+++ b/package.json
@@ -5,10 +5,20 @@
   "author": "Simon Egersand <s.egersand@gmail.com>",
   "license": "MIT",
   "preferGlobal": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/simeg/gulp-generator.git"
+  },
+  "engines": {
+    "node": ">=0.12.0"
+  },
   "bin": {
     "gulp-generator": "source/cli.js"
   },
   "dependencies": {
     "inquirer": "^1.2.2"
+  },
+  "scripts": {
+    "test": "gulp"
   }
 }
