--- a/package.json
+++ b/package.json
@@ -20,5 +20,13 @@
   },
   "scripts": {
     "test": "gulp"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-exclude-gitignore": "^1.0.0",
+    "gulp-istanbul": "^1.1.1",
+    "gulp-mocha": "^3.0.1",
+    "gulp-plumber": "^1.1.0"
   }
 }
