Integrate with Codecov

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,15 @@ os:
 node_js:
     - "stable"
     - "6"
-    - "5"
 sudo: false
+before_script:
+  - npm install -g gulp codecov istanbul
 script:
     - gulp
+    - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec
+    - codecov
 cache:
   directories:
     - node_modules
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
