--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-eslint": "^3.0.1",
     "gulp-exclude-gitignore": "^1.0.0",
     "gulp-istanbul": "^1.1.1",
+    "gulp-jsonlint": "^1.1.2",
     "gulp-mocha": "^3.0.1",
     "gulp-plumber": "^1.1.0",
     "mocha": "^3.1.2",
