--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ before_script:
   - npm install -g gulp codecov istanbul
 script:
     - gulp
-    - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec
-    - codecov
+    - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && codecov
 cache:
   directories:
     - node_modules
