Cache node_modules and do not build on OSX

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: node_js
 os:
     - linux
     - windows
-    - osx
 node_js:
     - "stable"
     - "6"
@@ -13,5 +12,8 @@ script:
     - gulp
     - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec
     - codecov
+cache:
+  directories:
+    - node_modules
 after_success:
   - bash <(curl -s https://codecov.io/bash)
