--- a/source/generator.config.json
+++ b/source/generator.config.json
@@ -1,10 +1,15 @@
 {
   "moduleNames": {
+    "autoprefixer": "autoprefixer",
     "babel": "gulp-babel",
     "browserSync": "browser-sync",
     "coffee": "gulp-coffee",
     "concat": "gulp-concat",
     "jshint": "gulp-jshint",
+    "less": "gulp-less",
+    "minifycss": "minifycss",
+    "sass": "gulp-sass",
+    "stylus": "gulp-stylus",
     "uglify": "gulp-uglify"
   },
   "sortOrder": [
