Try to fix codecov

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,8 @@ sudo: false
 before_script:
   - npm install -g gulp codecov istanbul
 script:
-    - gulp
-    - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec
-    - codecov
+    - ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec
+    - ./node_modules/.bin/codecov
 cache:
   directories:
     - node_modules
