--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "inquirer": "^1.2.2"
   },
   "devDependencies": {
+    "codecov": "^1.0.1",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
     "gulp-exclude-gitignore": "^1.0.0",
@@ -40,6 +41,7 @@
     "gulp-jsonlint": "^1.1.2",
     "gulp-mocha": "^3.0.1",
     "gulp-plumber": "^1.1.0",
+    "istanbul": "^0.4.5",
     "mocha": "^3.1.2",
     "mock-fs": "^3.12.1"
   }
