--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_script:
 script:
     - ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec
     - ./node_modules/.bin/codecov
+    - ls -la ./coverage
 cache:
   directories:
     - node_modules
