Do not use mock-fs on Jenkins
The package mock-fs was causing the istanbul report not to get rendered
for some reason. So during test the fs-mock will be replaced by an empty
function. Let's see if it works.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
   - npm install -g gulp codecov istanbul
 script:
     - gulp
-    - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec
+    - ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec
     - codecov
 cache:
   directories:
