--- a/source/generator.config.json
+++ b/source/generator.config.json
@@ -1,24 +1,35 @@
 {
   "moduleNames": {
-    "autoprefixer": "autoprefixer",
+    "autoprefixer": "gulp-autoprefixer",
     "babel": "gulp-babel",
     "browserSync": "browser-sync",
     "coffee": "gulp-coffee",
     "concat": "gulp-concat",
     "jshint": "gulp-jshint",
     "less": "gulp-less",
-    "minifycss": "minifycss",
+    "minifycss": "gulp-minify-css",
     "sass": "gulp-sass",
     "stylus": "gulp-stylus",
     "uglify": "gulp-uglify"
   },
-  "sortOrder": [
-    "coffee",
-    "jshint",
-    "concat",
-    "babel",
-    "uglify",
-    "dest",
-    "browserSync"
-  ]
+  "sortOrders": {
+    "js": [
+      "coffee",
+      "jshint",
+      "concat",
+      "babel",
+      "uglify",
+      "dest",
+      "browserSync"
+    ],
+    "css": [
+      "less",
+      "sass",
+      "stylus",
+      "autoprefixer",
+      "minifycss",
+      "dest",
+      "browserSync"
+    ]
+  }
 }
