Treat default modules as normal modules
Default modules that are always included should be treated as other
modules in the code to reduce unecessery complexity.

--- a/source/generator.config.json
+++ b/source/generator.config.json
@@ -1,13 +1,21 @@
 {
+  "defaultModules": [
+    "gulp",
+    "plumber",
+    "rename"
+  ],
   "moduleNames": {
     "autoprefixer": "gulp-autoprefixer",
     "babel": "gulp-babel",
     "browserSync": "browser-sync",
     "coffee": "gulp-coffee",
     "concat": "gulp-concat",
+    "gulp": "gulp",
     "jshint": "gulp-jshint",
     "less": "gulp-less",
     "minifycss": "gulp-minify-css",
+    "plumber": "gulp-plumber",
+    "rename": "gulp-rename",
     "sass": "gulp-sass",
     "stylus": "gulp-stylus",
     "uglify": "gulp-uglify"
