--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "gulp-mocha": "^3.0.1",
     "gulp-plumber": "^1.1.0",
     "mocha": "^3.1.2",
-    "mock-fs": "^3.12.1"
+    "mocha-sinon": "^1.1.6",
+    "mock-fs": "^3.12.1",
+    "sinon": "^1.17.6"
   }
 }
