Make all code available for testing
Export whole generator object for test builds to make it possible to
test private methods.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "gulpfile-generator": "source/cli.js"
   },
   "scripts": {
-    "test": "gulp"
+    "test": "NODE_ENV=test gulp"
   },
   "dependencies": {
     "cli-list": "^0.2.0",
