--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
         "keyword-spacing": [2, { "before": true }],
         "linebreak-style": [2, "unix"],
         "max-len": [2, 100],
+        "no-console": 2,
         "no-debugger": 2,
         "no-else-return": 2,
         "no-extra-semi": 2,
