Support using yarn

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,14 @@ node_js:
     - "6"
 sudo: false
 before_script:
-  - npm install -g gulp codecov istanbul
+  - npm install -g yarn gulp codecov istanbul
+  - yarn install
 script:
     - gulp
     - ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec
     - codecov
 cache:
+  yarn: true
   directories:
     - node_modules
 after_success:
