--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,7 @@
         "keyword-spacing": [2, { "before": true }],
         "linebreak-style": [2, "unix"],
         "max-len": [2, 100],
-        "no-console": 2,
+        "no-console": ["error", { "allow": ["warn", "log"] }],
         "no-debugger": 2,
         "no-else-return": 2,
         "no-extra-semi": 2,
