Added write script to package.json feature
Added promise to the output dependencies process

Added promise to catch writing error and asynchronous problem

Removed promise and switch all read and write file function to synchronous

Added some test for the 'write to package.json' feature

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ os:
     - linux
     - windows
 node_js:
+    - "4"
+    - "5"
+    # Using `v6.10.2` we will hit this error
+    # https://github.com/substack/node-mkdirp/pull/110
+    # So pin 6.10.0 for now
     - "6.10.0"
 sudo: false
 before_script:
