Updated new rule to eslint and removed node version in travis.xml

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "inquirer": "2.0.0"
   },
   "devDependencies": {
+    "eslint-plugin-html": "3",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
     "gulp-exclude-gitignore": "^1.0.0",
