--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,12 @@ os:
     - linux
     - windows
 node_js:
-    - "stable"
-    - "6"
+    - "4"
+    - "5"
+    # Using `v6.10.2` we will hit this error
+    # https://github.com/substack/node-mkdirp/pull/110
+    # So pin 6.10.0 for now
+    - "6.10.0"
 sudo: false
 before_script:
   - npm install -g yarn gulp codecov istanbul
