--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulpfile-generator",
-  "version": "1.2.1",
+  "version": "1.3.3",
   "description": "An interactive generator for custom Gulp configurations",
   "author": "Simon Egersand <s.egersand@gmail.com>",
   "license": "MIT",
@@ -34,6 +34,7 @@
     "inquirer": "2.0.0"
   },
   "devDependencies": {
+    "eslint-plugin-html": "3",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
     "gulp-exclude-gitignore": "^1.0.0",
