Fix issues when linting
No need to run the linter with Gulp when you can just use eslint.
Replaced two dependencies with one.

--- a/package.json
+++ b/package.json
@@ -31,10 +31,9 @@
     "inquirer": "2.0.0"
   },
   "devDependencies": {
+    "eslint": "5.10.0",
     "eslint-plugin-html": "3",
     "gulp": "3.9.1",
-    "gulp-eslint": "3.0.1",
-    "gulp-exclude-gitignore": "1.0.0",
     "gulp-istanbul": "1.1.1",
     "gulp-jsonlint": "1.1.2",
     "gulp-mocha": "3.0.1",
