--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "mocha-sinon": "1.1.6",
     "mock-fs": "4.7.0",
     "sinon": "1.17.6"
+  },
+  "resolutions": {
+    "graceful-fs": "4.2.4"
   }
 }
